--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Welcome!</h1>
-    <p>The sky is blue</p>
+    <p>The sky is falling</p>
     <a href="about.html">About us</a>
     <p>
         <!-- target="_blank" will make the page open up in a new tab -->
